--- a/Moho.Web/Views/Screen/Edit.cshtml
+++ b/Moho.Web/Views/Screen/Edit.cshtml
@@ -21,7 +21,26 @@
             <div class="form-group">
                 @Html.Label(field.Name, new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBox(field.Name, Model.Item[field.Name], new { @class = "form-control" })
+                    @switch (field.Type)
+                    {
+                        case ScreenFieldTypeEnum.Text:
+                            @Html.TextBox(field.Name, Model.Item[field.Name], new { @class = "form-control" })
+                            break;
+                        case ScreenFieldTypeEnum.Number:
+                            @Html.TextBox(field.Name, Model.Item[field.Name], new { @class = "form-control", type = "number" })
+                            break;
+                        case ScreenFieldTypeEnum.Date:
+                            @Html.TextBox(field.Name, Model.Item[field.Name], new { @class = "form-control", type = "date" })
+                            break;
+                        case ScreenFieldTypeEnum.Checkbox:
+                            @Html.CheckBox(field.Name, bool.Parse(Model.Item[field.Name].ToString()), new { })
+                            break;
+                        case ScreenFieldTypeEnum.TextArea:
+                            @Html.TextArea(field.Name, Model.Item[field.Name].ToString(), 5, 30, new { @class = "form-control" })
+                            break;
+                        default:
+                            break;
+                    }
                     @Html.ValidationMessage(field.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
