--- a/Moho.Web/Views/Screen/Show.cshtml
+++ b/Moho.Web/Views/Screen/Show.cshtml
@@ -31,12 +31,34 @@
             @foreach (ScreenField field in Model.Screen.ScreenFields)
             {
                 <td>
-                    @item[field.Name]
+                    @switch (field.Type)
+                    {
+                        case ScreenFieldTypeEnum.Text:
+                        case ScreenFieldTypeEnum.Number:
+                        case ScreenFieldTypeEnum.TextArea:
+                            @item[field.Name]
+                            break;
+                        case ScreenFieldTypeEnum.Date:
+                            @DateTime.Parse(item[field.Name].ToString()).ToShortDateString()
+                            break;
+                        case ScreenFieldTypeEnum.Checkbox:
+                            if (bool.Parse(item[field.Name].ToString()))
+                            {
+                                <span class="glyphicon glyphicon-ok text-success"></span>
+                            }
+                            else
+                            {
+                                <span class="glyphicon glyphicon-remove text-danger"></span>
+                            }
+                            break;
+                        default:
+                            break;
+                    }
                 </td>
             }
             <td>
                 @Html.ActionLink("Edit", "edit", Model.Screen.UriName, new { id = item["_id"] }, new { @class = "btn btn-warning btn-xs" })
-                @Html.ActionLink("Delete", "del", Model.Screen.UriName, new { id = item["_id"] }, new { @class = "btn btn-danger btn-xs", onclick="return confirm('Are you sure to deleting this record?');" })
+                @Html.ActionLink("Delete", "del", Model.Screen.UriName, new { id = item["_id"] }, new { @class = "btn btn-danger btn-xs", onclick = "return confirm('Are you sure to deleting this record?');" })
             </td>
         </tr>
     }
